--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: blue;
 }
 
 .App-logo {
@@ -15,7 +16,6 @@
 
 .App-header {
   background-color: green;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
