--- a/src/styles/LifeBar.css
+++ b/src/styles/LifeBar.css
@@ -1,7 +1,10 @@
 .container {
-  background-color: blue;
+  background-color: black;
   border-radius: 5px;
   border-style: dashed;
-  border-color: green;
+  border-color: black;
   width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 }
