--- a/src/styles/LifeBar.css
+++ b/src/styles/LifeBar.css
@@ -4,4 +4,15 @@
   border-style: dashed;
   border-color: black;
   width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.tenPercentClear {
+  background-color: #f1f1f1;
+  width: 100px;
+  margin: 10px;
+  text-align: center;
+  line-height: 75px;
+  font-size: 30px;
 }
