--- a/src/styles/LifeBar.css
+++ b/src/styles/LifeBar.css
@@ -8,11 +8,13 @@
   flex-direction: row;
   justify-content: center;
 }
-.tenPercentClear {
-  background-color: #f1f1f1;
+.container > div {
   width: 100px;
-  margin: 10px;
+  margin: 0px;
   text-align: center;
   line-height: 75px;
   font-size: 30px;
+}
+.tenPercentClear {
+  background-color: green;
 }
