added styling for the App-Header

--- a/src/styles/PlayerProgress.css
+++ b/src/styles/PlayerProgress.css
@@ -1,3 +1,9 @@
+.App-header {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 50%;
+}
 .container {
   display: flex;
   justify-content: space-around;
