--- a/src/styles/PlayerProgress.css
+++ b/src/styles/PlayerProgress.css
@@ -9,4 +9,7 @@
   justify-content: space-around;
   flex-direction: row;
   flex-grow: 3;
+  border-radius: 5px;
+  border-color: green;
+  border-style: solid;
 }
