--- a/src/styles/PlayerProgress.css
+++ b/src/styles/PlayerProgress.css
@@ -6,7 +6,7 @@
 }
 .container {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   flex-direction: row;
   flex-grow: 3;
   border-radius: 5px;
